--- a/TFG_prueba/contacto.html
+++ b/TFG_prueba/contacto.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header"></header>
-    <div class="container-fluid div1">
+    <div class="container-fluid contacto">
 
 
         <div class="row row-chat">
@@ -39,8 +39,8 @@
                 <img class="bot" src="img/bot.gif" alt="bot">
             </div>
         </div>
-        <hr>
-        <div class="row row-contact">
+        <hr class="animated fadeIn fast">
+        <div class="row row-contact animated fadeIn fast">
             <div class="col-md-4 col-sm-4 col-contact">
                 <img src="img/correo.png" alt="#"><br>
                 <h5>Email Us</h5><br>
