--- a/TFG_prueba/index.html
+++ b/TFG_prueba/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header"></header>
-    <div class="container-fluid div1">
+    <div id="inicio" class="container-fluid div1">
 
 
         <video class="video" autoplay muted loop id="myVideo">
@@ -161,17 +161,17 @@
 
 
 
-            <div class="col-md-4 col-sm-4 col-contact row-contact">
+            <div class="col-md-4 col-sm-4 col-contact row-contact animated fadeIn fast">
                 <img src="img/correo.png" alt="#"><br>
                 <h5>Email Us</h5><br>
                 <p><a href="mailto:hello@jbidigital.co.uk">hello@jbidigital.co.uk</a></p>
             </div>
-            <div class="col-md-4 col-sm-4 col-contact row-contact">
+            <div class="col-md-4 col-sm-4 col-contact row-contact animated fadeIn fast">
                 <img src="img/phone.png" alt="#"><br>
                 <h5>Call Us</h5><br>
                 <p>020 7043 2510</p>
             </div>
-            <div class="col-md-4 col-sm-4 col-contact row-contact">
+            <div class="col-md-4 col-sm-4 col-contact row-contact animated fadeIn fast">
                 <img src="img/casa2.png" alt="#"><br>
                 <h5>Visit Us</h5><br>
                 <p>24 Queen Anne St,<br>London W1G 9AY</p>
